# zellij-claude-monitor

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  README.md  deploy.sh  install.sh  zellij.kdl
layouts/: claude.kdl
scripts/: monitor-data.py  restart-zellij.sh  statusline.py  test_detect_agents.py
src/: collector.rs  data.rs  lib.rs  main.rs  render.rs  state.rs
